# rskkserv

./: .gitignore  06rskkserv.conf  ChangeLog  Makefile  Makefile.in  README.md  TODO  bootstrap.sh  config.status  configure  configure.in  make-dist.sh  rskkserv.conf  rskkserv.conf.in  rskkserv.spec  rskkserv.spec.in  skkserv.rb  skkserv.rb.in
debian/: changelog  conffiles  control  copyright  dirs  docs  init  preinst  prerm  rules
doc/: INSTALL.rd.ja  conf-o2n.rb  rskkserv.1.in  rskkserv.1.ja_JP.eucJP.in  rskkserv.conf.sample
ext/: Makefile  depend  extconf.rb  extconf.rb.in  skkdic.c
ext/lib/: cdbdic.rb  conf.rb  ebdic.rb  googledic.rb  logger.rb  nulldic.rb  skkdic.rb  skkservdic.rb
test/: cdbdic.rb  conf.rb  ebdic-common.rb  ebdic-koujien.rb  ebdic-mypaedia.rb  ebdic-wdic.rb  ebdic.rb  rskkserv.conf  skkdic.rb  skkserv.rb
